Fixes weird list item spacing

--- a/src/scss/base/typography/_general--non-critical.scss
+++ b/src/scss/base/typography/_general--non-critical.scss
@@ -72,6 +72,7 @@ li {
 
   ul &::marker {
     font-size: 1.5em;
+    line-height: 1;
   }
 
   ul ol &::marker {
